display db data in browser

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,22 +7,21 @@
   </head>
   <body>
     <h1>My Bucketlist</h1>
-    <div class="container">
-    <div>
-      <h2>Add to your bucketlist:</h2>
-      <form id="wishes-form">
-        <div>
-          <label for="added-wish">Wish:</label>
-          <input type="text" id="added-wish"/>
-        </div>
+    <div class="wrapper">
+      <div>
+        <h2>Add a Wish</h2>
+        <form id="wishes-form">
+          <div>
+            <label for="wish">Wish:</label>
+            <input type="text" id="wish"/>
+          </div>
           <input type="submit" value="Save" id="save"/>
-      </form>
-    </div>
-    <div>
-      <h2>Goals</h2>
-      <div id="bucketlist"</div>
-    </div>
+        </form>
+      </div>
+      <div>
+        <h2>Wishes</h2>
+        <div id="bucketlist"></div>
+      </div>
     </div>
   </body>
-
-  </html>
+</html>
